# subxt-call-example

./: Cargo.toml
metadata/: azero-13.0.scale
src/: aleph.rs  main.rs
