[package]
name = "aleph_subxt_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ink_macro = {version = "5.0.0" }
subxt = {version = "0.34.0", features = ["jsonrpsee"]}
subxt-signer = { version = "0.34.0", default-features = false, features = ["sr25519", "subxt", "native"] }
scale = {package = "parity-scale-codec", version = "3.4.0", default-features = false }
#subxt-signer = { version = "0.34.0", default-features = false, features = ["sr25519"] }
tokio = {version = "1.36.0", features = ["rt-multi-thread"]}
hex = "0.4.3"
